--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -168,113 +168,10 @@
 </section>
 <!-- TESTIMONIALS -->
 <section id="Testimonials" class="content-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="block-heading">
-          <h2>Users Feedback ♡</h2>
-          <p>Your experience matters!</p>
-        </div>
-        <div id="customers-testimonials" class="owl-carousel">
-          <div class="item">
-            <div class="shadow-effect">
-              <img class="img-circle" src="assets/images/sarah.jpg" alt="">
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-            </div>
-            <div class="testimonial-name">Sarah Jenks</div>
-          </div>
-          <div class="item">
-            <div class="shadow-effect">
-              <img class="img-circle" src="assets/images/tangelia.jpg" alt="">
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
-            </div>
-            <div class="testimonial-name">Tangelia Ekhoff</div>
-          </div>
-          <div class="item">
-            <div class="shadow-effect">
-              <img class="img-circle" src="assets/images/john-doe.jpg" alt="">
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            </div>
-            <div class="testimonial-name">John Doe</div>
-          </div>
-          <div class="item">
-            <div class="shadow-effect">
-              <img class="img-circle" src="assets/images/amy.jpg" alt="">
-              <p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
-            </div>
-            <div class="testimonial-name">Amy Tan</div>
-          </div>
-          <div class="item">
-            <div class="shadow-effect">
-              <img class="img-circle" src="assets/images/daniel.jpg" alt="">
-              <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-            </div>
-            <div class="testimonial-name">Daniel Felsted</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 <!-- END OF TESTIMONIALS -->
 <section id="Contact" class="content-section">
-  <div class="container">
-    <div class="block-heading">
-      <h2>Feedback</h2>
-      <p>Please let us know about your experience at Uniqueorns.</p>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <div class="contact-wrapper">
-          <div class="address-block border-bottom">
-            <h3 class="add-title">Headquaters</h3>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info">Unicorns street</span>
-            </div>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+16034134124</span>
-            </div>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">unicorns@unicorns.com</span>
-            </div>
-          </div>
-          <div class="address-block">
-            <h3 class="add-title">Branch</h3>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info"> Uniqueorns Street</span>
-            </div>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+6054756964</span>
-            </div>
-            <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">unicorns@unicorns.com</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <div class="form-wrap">
-          <form method="post" [ngClass]="{'was-validated': wasValidated}" [formGroup]="feedbackForm">
-            <div class="fname floating-label">
-              <input type="text" class="floating-input" name="fullName"  formControlName="fullName" required />
-              <label for="title" >Full Name</label>
-            </div>
-            <div class="email floating-label">
-              <input type="email" class="floating-input" name="email"  formControlName="email" required />
-              <label for="email">Email</label>
-            </div>
-            <div class="company floating-label">
-              <textarea type="text" class="floating-input" name="message"  formControlName="message" required></textarea>
-              <label for="email">Message</label>
-            </div>
-            <div class="submit-btn">
-              <button type="submit" (click)="submit()"  [disabled]="disableButton">Submit</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-feedback></app-feedback>
 </section>
 <footer class="footer text-center">
   <div class="container">
